--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   tf
   visualization_tools
+  mmath
+  visualization_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -141,6 +143,7 @@ SET(CMAKE_CXX_FLAGS "-std=c++11 -O2 -g -Wall ${CMAKE_CXX_FLAGS}")
 # )
 # add_library(clsuster src/cluster.cpp src/ekf.cpp)
 add_library(tracker src/tracker src/cluster.cpp src/ekf.cpp)
+add_library(tracker_kf src/tracker src/cluster_kf.cpp src/kf.cpp)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -152,6 +155,7 @@ add_library(tracker src/tracker src/cluster.cpp src/ekf.cpp)
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/ekf_tracking_node.cpp)
 add_executable(test_tracking src/test.cpp src/tracker src/cluster.cpp src/ekf.cpp)
+add_executable(test_tracking_kf src/test_kf.cpp src/tracker_kf src/cluster_kf.cpp src/kf.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -167,7 +171,8 @@ add_executable(test_tracking src/test.cpp src/tracker src/cluster.cpp src/ekf.cp
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-target_link_libraries(test_tracking ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+target_link_libraries(test_tracking binarion pca differential ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+target_link_libraries(test_tracking_kf binarion pca differential ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
 #############
 ## Install ##
